@@ -102,9 +102,9 @@
    `(diff-file-header ((t (:foreground ,fgbright :background unspecified :weight bold))))
    `(diff-function ((t (:inherit unspecified :foreground ,fgorange))))
    `(diff-header ((t (:background ,bgbright))))
-   `(diff-hl-change ((t (:foreground ,fgyellow :background unspecified :inherit diff-changed))))
-   `(diff-hl-delete ((t (:foreground ,fgred :inherit diff-removed))))
-   `(diff-hl-insert ((t (:foreground ,fggreen :inherit diff-added))))
+   `(diff-hl-change ((t (:foreground ,bgyellow :background unspecified :inherit diff-changed))))
+   `(diff-hl-delete ((t (:foreground ,bgred :inherit diff-removed))))
+   `(diff-hl-insert ((t (:foreground ,bggreen :inherit diff-added))))
    `(diff-hunk-header ((t (:inherit unspecified :weight bold :foreground ,fgyellow :underline t))))
    `(diff-indicator-added ((t (:foreground ,fggreen :weight bold :inherit unspecified))))
    `(diff-indicator-changed ((t (:foreground ,fgyellow :weight bold :inherit unspecified ))))
