@@ -43,6 +43,11 @@ This project adheres to [[http://semver.org][Semantic Versioning]].
    Inherit from =font-lock-warning-face= and don't specify a special
    underline.
 
+** CHANGED the Diff Highlight faces
+
+   Make the foreground and background color on the =diff-hl-change=,
+   =diff-hl-add= and =diff-hl-remove= the same.
+
 ** REMOVED the 10th rainbow delimiters depth face
 
 * [[https://github.com/ryuslash/yoshi-theme/compare/v6.0.0...v6.1.0][6.1.0]] -- 2015-11-20
